# loot-box-contracts

./: README.md
contracts/: .gitignore  Cargo.toml  commands.txt
contracts/artifacts/: checksums.txt  checksums_intermediate.txt  platform.wasm  treasury.wasm
contracts/contracts/platform/: Cargo.toml  build.sh
contracts/contracts/platform/examples/: schema.rs
contracts/contracts/platform/schema/: oracle.json  platform.json
contracts/contracts/platform/src/: contract.rs  helpers.rs  lib.rs
contracts/contracts/platform/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
contracts/contracts/treasury/: Cargo.toml
contracts/contracts/treasury/examples/: schema.rs
contracts/contracts/treasury/schema/: treasury.json
contracts/contracts/treasury/src/: contract.rs  helpers.rs
contracts/contracts/treasury/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
contracts/scripts/: package.json
contracts/scripts/src/backend/: envs.ts
contracts/scripts/src/backend/services/: call-contract.ts  constants.ts  generate-json.ts  gov-contract.ts  import-logs.ts  instantiate-contract.ts  math.ts  migrate-contract.ts  query-targets.ts  store-contract.ts  update-config.ts  utils.ts
contracts/scripts/src/common/account/: cw-helpers.ts  sg-helpers.ts
contracts/scripts/src/common/codegen/: Oracle.client.ts  Oracle.message-composer.ts  Oracle.types.ts  Platform.client.ts  Platform.message-composer.ts  Platform.types.ts  Treasury.client.ts  Treasury.message-composer.ts  Treasury.types.ts
contracts/scripts/src/common/config/: config-utils.ts  config.json  index.ts  logs.json
contracts/scripts/src/common/interfaces/: index.ts
contracts/scripts/src/common/utils/: index.ts
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs  platform.rs
contracts/tests/src/helpers/: platform.rs  treasury.rs
(+6 files in other folders)
