[workspace]
members = [
    "contracts/*",
    "packages/*",
    "tests"
]
exclude = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.4"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
nois = "0.8.0"
serde = "1.0.163"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
cw-multi-test = "0.17.0"
speculoos = "0.11.0"
getrandom = { version = "0.2.9", features = ["js"] }
semver = "1.0.20"

loot-box-base = { path = "./packages/loot-box-base" }

platform = { path = "./contracts/platform" }

